# functional-morphology-for-koine-greek

./: .gitignore  Makefile  README  README.md  fm-greek.cabal  greek.lexicon  stack.yaml
greek/: AttrGreek.hs  BuildGreek.hs  CommandsGreek.hs  CompositeGreek.hs  DictGreek.hs  Guessing.hs  Main.hs  RulesGreek.hs  TypesGreek.hs
lib/: CTrie.hs  Command.hs  CommonMain.hs  Compound.hs  DictToDictionary.hs  Dictionary.hs  EditDistance.hs  Frontend.hs  General.hs  GeneralIO.hs  Invariant.hs  Net.hs  Options.hs  Print.hs  SharedString.hs  Test.hs  Tokenize.hs  Trie.hs  UTF8.hs  Util.hs  rts.c  trie_lib.c  trie_lib.h
lib/Dict/: Abs.hs  DictMakefile  Doc.tex  ErrM.hs  GetDict.hs  Lex.hs  Lex.x  Par.hs  Par.y  Print.hs  Skel.hs
tools/: Clean.hs  trie.c
