name: fm-greek
version: 0.1.0
synopsis: Functional Morphology for Koine Greek
description: Functional morphology for Koine Greek, based on the Functional Morphology framework by Markus Forsberg and Aarne Ranta.
license: GPL-3
license-file: LICENSE
author: Ilja Sidoroff
maintainer: ilja.sidoroff@iki.fi

cabal-version: >=1.10
build-type: Simple

extra-source-files: lib/Dict/Lex.x
                    , lib/Dict/Par.y
            
executable morpho_greek
  main-is: Main.hs
  hs-source-dirs: greek
                , lib
  build-tools: alex
             , happy
  other-modules: Dict.Lex
               , Dict.Par
  default-language: Haskell98
  build-depends: base
--               , haskell98
               , array
               , containers
               , network
               , hashable
               , hashtables
  c-sources: lib/rts.c
           , lib/trie_lib.c
  cc-options: -O3
  

